z-index issue

--- a/docs/global.css
+++ b/docs/global.css
@@ -271,7 +271,7 @@ input,button,a{
 	margin:min(.5vw,.25vh) min(.5vw,.25vh);
   outline: none;
   border:none;
-
+  z-index: 2;
 }
 a, i{
   border-radius: 2px;
@@ -330,7 +330,6 @@ button.add-button {
   background-repeat: no-repeat;
   background-position: center;
   margin-left: 30px;
-  z-index: 1;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
@@ -913,7 +912,7 @@ button svg{
 .svg-button{
   background-color: transparent;
   margin-bottom: 40px;
-  z-index: 1;
+  z-index: 2;
 }
 #workout-svg{
   height: 50%;
